2006-05-03  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.MediaEngine/Vlc/VlcPlayerEngine.cs: 
	fix build error for VLC engine (BGO #340496) 

2006-05-02  Aaron Bockover  <aaron@abock.org>

	* entagged-sharp/Ogg/OggFileReader.cs: Added application/x-vorbis+ogg
	and application/x-vorbis+ogg as a SupportedMimeType (BNC #169616)

2006-05-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/LibraryTrackInfo.cs: Call TrackInfo's OnChanged when
	saving changes to a Track.

	* src/Banshee.Base/TrackInfo.cs: Add event and protected virtual method
	OnChanged for when a track is changed.

	* src/Banshee.Base/Sources/PlaylistSource.cs: Add Id property, and
	public ClearTracks and ContainsTrack methods.

2006-05-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/Dap/DapCore.cs: Fix small bugs that caused iPods to
	sometimes show up as mass storage devices (BGO #340313).

2006-05-01  Aaron Bockover  <aaron@abock.org>

	Fix a locking bug that caused crashes (BGO #340306)

	* src/Banshee.Base/Source.cs: Added virtual TracksMutex object that
	can be used to properly lock the Tracks collection

	* src/PlayerInterface.cs:
	* src/PlaylistModel.cs: lock SourceManager.ActiveSource.TracksMutex
	when performing operations on SourceManager.ActiveSource.Tracks
	
	* src/Banshee.Base/Sources/LibrarySource.cs:
	* src/Banshee.Base/Sources/PlaylistSource.cs: implement TracksMutext
	by inlining the internal collection SyncRoot mutex and locking when
	necessary

2006-04-20  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayer.cs: Added GetIsLive

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayerEngine.cs: Added 
	http support to SourceCapabilities, added more RealPlayer-specific 
	file formats to ExplicitDecoderCapabilities; implemented CanSeek by
	calling GetIsLive on the remote player; properly handle buffering 
	and title messages

2006-04-17  Aaron Bockover  <aaron@abock.org>

	* banshee.mdp: Updated MonoDevelop project
