@@ -1,3 +1,7 @@
+2006-05-04  Jakub Friedl  <jfriedl@suse.cz>
+
+	* src/AboutBox.cs: Added Jakub Friedl to Translator Credits (Czech)
+
 2006-05-03  Aaron Bockover  <aaron@abock.org>
 
 	* src/Banshee.MediaEngine/Vlc/VlcPlayerEngine.cs: 
